[gd_scene load_steps=2 format=2]

[ext_resource path="res://SentTransaction.gd" type="Script" id=1]

[node name="SentTransaction" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainPanel" type="ColorRect" parent="."]
margin_right = 358.0
margin_bottom = 100.0
color = Color( 0, 0, 0, 1 )

[node name="NetworkLogo" type="TextureRect" parent="MainPanel"]
margin_left = 11.0
margin_top = 15.0
margin_right = 51.0
margin_bottom = 55.0

[node name="Info" type="Label" parent="MainPanel"]
margin_left = 69.0
margin_top = 9.0
margin_right = 209.0
margin_bottom = 29.0
text = "Approving Endpoint allowance for
Token
on Network."

[node name="StatusIndicator" type="ColorRect" parent="MainPanel"]
margin_left = 304.0
margin_top = 20.0
margin_right = 344.0
margin_bottom = 60.0

[node name="StatusLabel" type="Label" parent="MainPanel"]
margin_left = 297.0
margin_top = 68.0
margin_right = 348.0
margin_bottom = 82.0
text = "Pending"
align = 1

[node name="ScanLink" type="RichTextLabel" parent="MainPanel"]
margin_left = 70.0
margin_top = 69.0
margin_right = 152.0
margin_bottom = 83.0
bbcode_enabled = true
bbcode_text = "[u]Scanner Link[/u]"
text = "Scanner Link"
scroll_active = false

[node name="Button" type="TextureButton" parent="MainPanel/ScanLink"]
margin_left = 3.0
margin_right = 83.0
margin_bottom = 15.0
mouse_default_cursor_shape = 2

[node name="CCIPExplorerLink" type="RichTextLabel" parent="MainPanel"]
visible = false
margin_left = 183.0
margin_top = 69.0
margin_right = 274.0
margin_bottom = 83.0
bbcode_enabled = true
bbcode_text = "[u]CCIP Explorer[/u]"
text = "CCIP Explorer"
scroll_active = false

[node name="Button" type="TextureButton" parent="MainPanel/CCIPExplorerLink"]
margin_right = 86.0
margin_bottom = 15.0
mouse_default_cursor_shape = 2
